<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/mainActivityLayout">

    <LinearLayout
            android:id="@+id/mainHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/schedule_on_label" />

        <Spinner
                android:id="@+id/mainTypeOfRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:dropDownWidth="wrap_content"
                android:popupBackground="@color/colorBackground" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_more_vert_black_24dp"
                android:id="@+id/mainMoreButton"
                android:layout_weight="1"
                android:background="#00E30808" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainHeaderLayout">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:id="@+id/mainContentUpperPanel">

            <Button
                    android:id="@+id/mainPrevRangeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/previous_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            <EditText
                    android:id="@+id/mainDateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:textColor="@color/white"
                    tools:text="@tools:sample/date/ddmmyy" />

            <Spinner
                    android:id="@+id/mainDataRangeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:popupBackground="@color/colorBackground"
                    android:visibility="gone" />

            <Button
                    android:id="@+id/mainNextRangeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/next_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>

        <ListView
                android:id="@+id/mainScheduleListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1">

        </ListView>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:orientation="horizontal"
                android:id="@+id/mainContentBottomPanel">

            <Button
                    android:id="@+id/mainChangeGroupButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/groups_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            <Button
                    android:id="@+id/mainChangeDirectionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/change_field_of_study_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>